tests/rgs/valid/during_always_in_named_story.rgs
STORY quest PRIORITY 1.
    ACTION flee.
    EVENT danger ENVIRONMENT.
    PHASE active.
    PHASE done.
    AGENT Hero:
        DURING ALWAYS:
            WHEN danger ENVIRONMENT:
                DO flee.
        DURING active:
            WHEN danger ENVIRONMENT:
                ENTER done.
