tests/rgs/semantic_errors/undeclared_condition_forget.rgs
STORY quest PRIORITY 1.
    EVENT spotted ENVIRONMENT.
    PHASE active.
    AGENT Hero:
        DURING active:
            WHEN spotted ENVIRONMENT:
                DO FORGET is_hungry.
